<resources>
    <string name="app_name">Pro Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="controls_and_gestures">Controls and Gestures</string>
    <string name="zoom_controls">Zoom Controls</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="scroll_gestures">Scroll Gestures</string>
    <string name="rotate_gestures">Rotate Gestures</string>
    <string name="compass">Compass</string>
    <string name="toolbar">Toolbar</string>
    <string name="map_type">Map Type</string>
    <string name="style">Map Style</string>
    <string name="show_buildings">Show Buildings</string>
    <string name="zoom_level"><![CDATA[Zoom Level (1 -> 20)]]></string>
    <string name="min_level">Min Level</string>
    <string name="max_level">Max Level</string>
    <string name="move_to_berlin">move to berlin</string>
    <string name="move_to_tokyo_bounds">move to tokyo bounds</string>
    <string name="move_to_denver_and_restrict">move to denver and restrict</string>
    <string name="animate_to_nairobi">animate to nairobi</string>
    <string name="enable_marker_drag">Enable Marker Drag</string>
    <string name="enable_custom_info_window">Enable Custom Info Window</string>
    <string name="add_default_marker_on_helsinki">Add default marker on helsinki</string>
    <string name="remove_all_markers">remove all markers</string>
    <string name="add_custom_marker_on_gaza_vector">add custom marker on gaza (vector)</string>
    <string name="add_custom_marker_on_damietta_bitmap">add custom marker on damietta(bitmap)</string>


    <string name="country_name">Country Name : %1$s</string>
    <string name="country_code">Country Code : %1$s</string>
    <string name="postal_code">Postal Code : %1$s</string>
    <string name="admin_area">Admin Area : %1$s</string>
    <string name="latitude">Latitude : %1$s</string>
    <string name="longitude">Longitude : %1$s</string>
</resources>