<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    android:background="@drawable/dialog_bg">    <TextView        android:id="@+id/controlsTv"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:text="@string/controls_and_gestures"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <HorizontalScrollView        android:id="@+id/hSV"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:scrollbars="none"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/controlsTv">        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="horizontal">            <CheckBox                android:id="@+id/ZoomControls"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/zoom_controls"                android:textSize="18sp" />            <CheckBox                android:id="@+id/ZoomGestures"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/zoom_gestures"                android:textSize="18sp" />            <CheckBox                android:id="@+id/ScrollGestures"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/scroll_gestures"                android:textSize="18sp" />            <CheckBox                android:id="@+id/RotateGestures"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/rotate_gestures"                android:textSize="18sp" />            <CheckBox                android:id="@+id/Compass"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/compass"                android:textSize="18sp" />            <CheckBox                android:id="@+id/Toolbar"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/toolbar"                android:textSize="18sp" />        </LinearLayout>    </HorizontalScrollView>    <TextView        android:id="@+id/mapTypeTv"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginTop="16dp"        android:text="@string/map_type"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/hSV" />    <androidx.recyclerview.widget.RecyclerView        android:id="@+id/mapTypeRecycler"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:orientation="horizontal"        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/mapTypeTv" />    <TextView        android:id="@+id/mapStyleTv"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginTop="16dp"        android:text="@string/style"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/mapTypeRecycler" />    <androidx.recyclerview.widget.RecyclerView        android:id="@+id/mapStyleRecycler"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:orientation="horizontal"        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/mapStyleTv" /></androidx.constraintlayout.widget.ConstraintLayout>