<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@drawable/dialog_bg">    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/helsinkiBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/add_default_marker_on_helsinki"        android:textSize="12sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/gazaBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="5dp"        android:text="@string/add_custom_marker_on_gaza_vector"        android:textSize="12sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/helsinkiBtn" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/damiettaBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/add_custom_marker_on_damietta_bitmap"        android:textSize="12sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/gazaBtn" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/clearBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/remove_all_markers"        android:textSize="12sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/damiettaBtn" />    <CheckBox        android:id="@+id/enableDrag"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/enable_marker_drag"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/clearBtn" />    <CheckBox        android:id="@+id/customWindow"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/enable_custom_info_window"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/enableDrag" /></androidx.constraintlayout.widget.ConstraintLayout>