<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@drawable/dialog_bg">    <CheckBox        android:id="@+id/showBuildings"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/show_buildings"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/zoomLevelTv"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:text="@string/zoom_level"        android:textColor="@color/black"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/showBuildings" />    <LinearLayout        android:id="@+id/linLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:orientation="horizontal"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/zoomLevelTv">        <EditText            android:id="@+id/minLevelEt"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginEnd="4dp"            android:layout_weight="1"            android:background="@drawable/zoom_level_et"            android:hint="@string/min_level"            android:padding="12dp"            android:textSize="14sp"            android:textStyle="bold" />        <EditText            android:id="@+id/maxLevelEt"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="4dp"            android:layout_weight="1"            android:background="@drawable/zoom_level_et"            android:hint="@string/min_level"            android:padding="12dp"            android:textSize="14sp"            android:textStyle="bold" />    </LinearLayout>    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/berlinBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/move_to_berlin"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/linLayout" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/tokyoBoundsBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/move_to_tokyo_bounds"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/berlinBtn" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/denverBoundsBtnRestrict"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/move_to_denver_and_restrict"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/tokyoBoundsBtn" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/nairobiBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="14dp"        android:background="@drawable/camera_button_bg"        android:padding="8dp"        android:text="@string/animate_to_nairobi"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/denverBoundsBtnRestrict" /></androidx.constraintlayout.widget.ConstraintLayout>